--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <link href="StyleSheet.css" rel="stylesheet">
         <title>My Google</title>
     </head>
-
+    <header>
+        <p>Gmail</p>
+        <p>Images</p>
+    </header>
     <body>
         <div>
             <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
